--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.7
 Flask==3.0.3
+Flask-CORS==3.0.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
