Adding email compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 beautifulsoup4==4.12.3
 blinker==1.8.2
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.7
 Flask==3.0.3
-Flask-CORS==3.0.10
+Flask-Cors==3.0.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -18,5 +19,9 @@ pycparser==2.22
 PyMuPDF==1.24.4
 PyMuPDFb==1.24.3
 pytesseract==0.3.10
+python-http-client==3.3.7
+sendgrid==6.11.0
+six==1.16.0
 soupsieve==2.5
+starkbank-ecdsa==2.2.0
 Werkzeug==3.0.3
